--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.27.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -17,7 +18,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.7",
     "nodemailer": "^6.6.3",
-    "nodemon": "^2.0.12",
+    "nodemon": "^2.0.13",
+    "to": "^0.2.9",
+    "update": "^0.7.4",
     "uuid": "^8.3.2"
   }
 }
