--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "cloudinary": "^1.27.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "email-check": "^1.1.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
+    "kickbox": "^2.0.4",
     "mongoose": "^5.13.7",
     "nodemailer": "^6.6.5",
     "nodemon": "^2.0.13",
